--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Palatino Linotype', serif;
     background: #120d17;
     margin: 0;
     color: #d8d2e1;
@@ -15,6 +15,7 @@ body{
     padding: 20px;
     text-align: center;
     text-shadow: 0 0 6px black;
+    border-bottom: 4px double #743044;
 }
 
 main{
@@ -23,16 +24,28 @@ main{
     padding: 20px;
     background: #1b1125;
     box-shadow: 0 6px 18px rgba(0,0,0,0.6);
-    border: 1px solid #492942
+    border: 1px solid #492942;
+    border-top: 6px solid #743044
+}
+
+h2:before{
+    content: '⚱️';
+    margin-right: 8px;
+    color: #bf7a96;
+}
+h2:after{
+    content: '⚱️';
+    margin-right: 8px;
+    color: #bf7a96;
 }
 
 h1{ margin: 0; font-size: 1.6rem; letter-spacing: 2px; color: #f7cadb;}
-h2{ margin-top: 24px; font-size: 1.25rem; border-bottom: 1px solid #ececec; padding-bottom: 10px; color: #e88fae;}
+h2{ margin-top: 24px; font-size: 1.25rem; border-bottom: 1px solid #4b2b43; padding-bottom: 10px; color: #e88fae;}
 h3{ margin: 10px 0 6px;color: #db8db6;}
 
 p{
-    line-height: 2.8;
-    margin: 0 0 18px 0;
+    line-height: 3;
+    margin: 0 0 48px 0;
 }
 
 .float-left{
@@ -66,7 +79,14 @@ section{
     padding: 14px;
     border-radius: 6px;
     min-height: 160px;
-    box-shadow: 0 0 12px rgba(0,0,0,0.4)
+    box-shadow: 0 0 12px rgba(0,0,0,0.4);
+    transition: 0.3s ease;
+}
+
+section:hover{
+    box-shadow: 0 0 20px rgba(255, 0, 94, 0.6);
+    transform: translateY(-3px);
+    border-color: #ee0f6c;
 }
 section img{
     width: 100%;
